# spotify_map

./: .gitignore  README.md  artists_missing_birth_date.csv  manage.py  pyproject.toml
spotify_apps/: asgi.py  backup_databases.py  settings.py  urls.py  wsgi.py
spotify_map/: _find_new_artists.py  _search_for_missing_birthdates.py  admin.py  apps.py  coordinates.py  fix_coords.py  models.py  musicbrainz.py  spotify_map_artists_updater.csv  spotify_utils.py  urls.py  views.py
spotify_map/management/commands/: export_artists_to_csv.py  fetch_top_artists.py  import_artists_from_csv.py  refresh_json.py
spotify_map/templates/: home.html  landing.html  loading.html  logout_redirect.html  top_artists.html  zodiac.html
